# evergreening

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  generator.py  pipeline.py
app/agentic/: evergreen.py
app/core/: config.py
app/models/: input.py  output.py
app/prompts/: __init__.py  evergreen-extractor.md  prompts.py
app/tasks/: scraper.py  yaml_client.py
data/: evergreening-input.yaml  evergreening-output.yaml
public/: index.html
template/: evergreen.jinja
